# py-portscan

./: README.md  pyproject.toml
.github/: copilot-instructions.md
src/py_portscan/: __init__.py  cli.py  data_input.py  input.py  portscan.py
tests/: __init__.py  test_cli.py  test_portscan.py
