[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py-portscan"
version = "0.1.0"
description = "A modern Python port scanner CLI tool."
authors = [
    { name = "Václav Brožík" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "mypy",
    "flake8",
    "pylint",
    "pytest"
]
# To install the development dependencies, run: pip install .[dev]

[project.scripts]
py-portscan = "py_portscan.cli:main"

[tool.mypy]
python_version = "3.10"
# ignore_missing_imports = true
mypy_path = "src"

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]

[tool.pylint]
disable = ["C0114", "C0115", "C0116"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
